AX: VoiceOver doesn't read characters when user presses left / right arrows in Monaco code editor https://bugs.webkit.org/show_bug.cgi?id=270616 rdar://123984168

Reviewed by Andres Gonzalez.

When the character or selection extent moves by just one visible position, infer
that it was a character granularity move, rather than a discontiguous selection.

* LayoutTests/accessibility/mac/custom-text-editor-expected.txt: Added.
* LayoutTests/accessibility/mac/custom-text-editor.html: Added.
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::inferDirectionFromIntent):
(WebCore::AXObjectCache::postTextStateChangePlatformNotification):

Canonical link: https://commits.webkit.org/275998@main